<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GymRat</string>
    <string name="logo">Logo</string>
    <string name="gymrat">GymRat</string>
    <string name="welcometext">Tervetuloa GymRat:iin</string>
    <string name="start">Aloita</string>
    <string name="luoprofiili">Luo itsellesi profiili</string>
    <string name="kayttajatunnus">Käyttäjätunnus*</string>
    <string name="man">Mies</string>
    <string name="woman">Nainen</string>
    <string name="maxPenkki">Penkki:</string>
    <string name="maxKyykky">Kyykky:</string>
    <string name="maxMaastaveto">Maastaveto:</string>
    <string name="maxPystypunnerrus">Pystypunnerrus:</string>
    <string name="KG">kg</string>
    <string name="paino_inffo_teksti">Anna oma yhden toiston maksimiarvio (paino jonka saisit varmasti vähintään kerran tai kaksi nostettua).</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>

    <string name="seuraava">Seuraava</string>
    <string name="painolla">Painolla</string>
    <string name="toistom_r">Toistomäärä</string>
    <string name="poista_muistutus">Poista muistutus</string>
    <string name="tanaan">Tänään</string>
    <string name="hei_user">Hei henkilön username</string>


    <string name="Slash">/</string>
    <!-- Strings used for fragments for navigation -->

    <string name="popupInfo">Valitse treeni valikosta.\n\nOhjelma on nelipäiväinen, niin suosittelemme valitsemaan jokaisella urheilukerralla eri ohjelman kuin viimeksi.\n\n Tekemällä tasaisesti jokaista ohjelman osiota, saat parhaan kehityksen.\n\nSuosittelemme myös ohjelman lisäksi tekemään muita lihaksia.\n\nHyvää treenaamista!</string>
    <string name="darkmode">DarkMode</string>
    <string name="tallenna">Tallenna</string>
    <string name="name_info">Muokkaa käyttäjätunnusta painamalla</string>
    <string name="trophy_name1">Suutu jo!</string>
    <string name="trophy_info1">Nosta rautaa tarpeeks</string>
    <string name="trophy_pvm">Palkinto avattu:</string>
    <string name="trophy_info2">Nosta 100kg</string>
    <string name="trophy_name3">Treeniviikko</string>
    <string name="trophy_name2">Rauta nousee</string>
    <string name="trophy_info3">Treenaa viikon jokaisena päivänä</string>
    <string name="trophy_name4">Ensimmäinen treeni</string>
    <string name="trophy_info4">Suorita harjoitus ensimmäisen kerran</string>
    <string name="trophy_name5">Jaksaa jaksaa!</string>
    <string name="trophy_info5">Suorita 10 treeniä</string>
    <string name="muokkaa">Muokkaa tietoja</string>
    <string name="valmis_btn">Valmis</string>
    <string name="suoritus_tallennettu">Suoritus tallennettu!</string>
    <string name="ekstrasetit">Ekstrasetit:</string>
    <string name="salipv">Salipäivä:</string>
    <string name="suositeltu_painonkorotus">Suositeltu painonkorotus:</string>
    <string name="hyv_ksy_korotus">Hyväksy korotus</string>
    <string name="palaa_kotiin">Palaa kotiin</string>
    <string name="plusButton">+</string>
    <string name="minusButton">-</string>
    <string name="edellinen">Edellinen</string>
    <string name="settimaara">2</string>
    <string name="setti">Setti</string>
    <string name="toisto">Toisto</string>
    <string name="huomenna">Huomenna</string>
    <string name="tulossa">Tulossa</string>
    <string name="sinulla_ei_ole_muistutuksia">Sinulla ei ole muistutuksia</string>
    <string name="valitse_harjoitus">Valitse harjoitus:</string>
    <string name="punnerrus">Pystypunnerrus</string>
    <string name="haluatko_poistaa_treenin">Haluatko poistaa treenin?</string>
    <string name="kyll">Kyllä</string>
    <string name="ei">Ei</string>
    <string name="salip_iv">Salipäivä</string>
    <string name="takaisinbtn">Takaisin</string>
    <string name="extratoistot">Extratoistot</string>
    <string name="suositeltu_painonlis_ys">Suositeltu painonlisäys</string>
    <string name="treenin_painot">Treenin painot</string>
    <string name="penkki">Penkki</string>
    <string name="kyykky">Kyykky</string>
    <string name="maastaveto">Maastaveto</string>
    <string name="pystypunnerrus">Pystypunnerrus</string>
</resources>