<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrophyActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="101dp">

        <LinearLayout
            android:id="@+id/testl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView

                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:alpha="0.5"
                >

                <TextView
                    android:id="@+id/info_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/trophy_name1"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/trophy_info1"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"

                    android:text="@string/trophy_pvm"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/imageStar1"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:contentDescription=""
                    android:src="@android:drawable/star_off"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:alpha="0.5"
                >

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/trophy_name2"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/trophy_info2"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"

                    android:text="@string/trophy_pvm"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/imageStar2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/star_off"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:alpha="0.5">

                <TextView
                    android:id="@+id/info_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/trophy_name3"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/trophy_info3"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"

                    android:text="@string/trophy_pvm"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/imageStar3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/star_off"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:alpha="0.5">

                <TextView
                    android:id="@+id/info_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/trophy_name4"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/trophy_info4"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"

                    android:text="@string/trophy_pvm"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/imageStar4"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/star_off"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:alpha="0.5">

                <TextView
                    android:id="@+id/info_text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/trophy_name5"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/trophy_info5"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="75dp"

                    android:text="@string/trophy_pvm"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


                <ImageView
                    android:id="@+id/imageStar5"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@android:drawable/star_off"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>