<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:layout_editor_absoluteY="25dp"
    >

    <TextView
        android:id="@+id/UserName"
        android:layout_width="301dp"
        android:layout_height="101dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="53dp"
        android:text="@string/muokkaa"
        android:textAlignment="center"
        android:textColor="#30475E"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="245dp"
        android:layout_height="60dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="50dp"
        android:onClick="toMainMenu"
        android:text="@string/valmis_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPystyPunnerrus" />

    <EditText
        android:id="@+id/maxPenkki"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/maxPenkki"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/maxPenkkiText"
        app:layout_constraintTop_toBottomOf="@+id/inffo" />

    <EditText
        android:id="@+id/maxKyykky"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/maxPenkkiText2"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkki" />

    <EditText
        android:id="@+id/maxMaastaveto"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toEndOf="@+id/maxPenkkiText3"
        app:layout_constraintTop_toBottomOf="@+id/maxKyykky" />

    <EditText
        android:id="@+id/maxPystyPunnerrus"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/maxPenkkiText8"
        app:layout_constraintStart_toEndOf="@+id/maxPenkkiText4"
        app:layout_constraintTop_toBottomOf="@+id/maxMaastaveto" />

    <TextView
        android:id="@+id/maxPenkkiText"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/maxPenkki"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/maxPenkki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inffo" />

    <TextView
        android:id="@+id/maxPenkkiText5"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="42dp"
        android:gravity="center_vertical"
        android:text="@string/KG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxPenkki"
        app:layout_constraintTop_toBottomOf="@+id/inffo" />

    <TextView
        android:id="@+id/maxPenkkiText6"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:gravity="center_vertical"
        android:text="@string/KG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxKyykky"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText5" />

    <TextView
        android:id="@+id/maxPenkkiText7"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="41dp"
        android:gravity="center_vertical"
        android:text="@string/KG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxMaastaveto"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText6" />

    <TextView
        android:id="@+id/maxPenkkiText8"
        android:layout_width="115dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="41dp"
        android:gravity="center_vertical"
        android:text="@string/KG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/maxPystyPunnerrus"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText7" />

    <TextView
        android:id="@+id/maxPenkkiText2"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/maxKyykky"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText" />

    <TextView
        android:id="@+id/maxPenkkiText3"
        android:layout_width="116dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/maxMaastaveto"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/maxPenkki"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText2" />

    <TextView
        android:id="@+id/maxPenkkiText4"
        android:layout_width="116dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/maxPystypunnerrus"
        android:textAlignment="center"

        app:layout_constraintEnd_toStartOf="@+id/maxPenkki"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPenkkiText3" />

    <TextView
        android:id="@+id/inffo"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/paino_inffo_teksti"
        android:textAlignment="center"
        android:textColor="#30475E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserName" />

</androidx.constraintlayout.widget.ConstraintLayout>