<?xml version="1.0" encoding="utf-8"?>
<!-- Author Jonne -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/todayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tanaan"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.example.gymrat.NoScrollListView
                    android:id="@+id/taskListToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tomorrowContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/huomenna"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.example.gymrat.NoScrollListView
                    android:id="@+id/taskListTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/otherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tulossa"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.example.gymrat.NoScrollListView
                    android:id="@+id/taskListUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hei_user"
            android:textColor="#EC5D5D"
            android:textSize="38sp"
            android:textStyle="normal" />
<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity=""
            android:text="sinulla \nei ole tänään \ntapahtumia"
            android:textColor="#323872"
            android:textSize="34dp"
            android:textStyle="bold" />
-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sinulla_ei_ole_muistutuksia"
            android:textColor="#78909C"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|right|bottom"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="80sp"
        android:contentDescription="Luo"
        android:onClick="openAddModifyTask"
        android:src="@drawable/ic_baseline_add_circle_24"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>